# localmind

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
localmind/: __init__.py  __main__.py  assistant.py  cli.py  config.py  providers.py  storage.py
localmind/skills/: __init__.py  calc.py  file_search.py  notes.py  reminders.py
tests/: conftest.py  test_routing.py  test_skills.py  test_storage.py
