[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "localmind"
version = "0.1.0"
description = "A privacy-first, local AI assistant gateway. All data stays on your machine."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "VictorLin" }]
keywords = ["ai", "assistant", "privacy", "local", "offline", "llm", "ollama", "skills"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
dependencies = [
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# Install with: pip install "localmind[local]" to enable the local-endpoint
# (Ollama / LM Studio) provider.
local = ["requests>=2.28"]
# Development / testing tools.
dev = ["pytest>=7.0"]

[project.scripts]
localmind = "localmind.cli:main"

[project.urls]
Homepage = "https://github.com/VictorLin/localmind"
Repository = "https://github.com/VictorLin/localmind"

[tool.setuptools.packages.find]
include = ["localmind*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
